--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ langchain>=0.1.0
 langchain-core>=0.1.0
 langchain-community>=0.0.13
 langchain-openai>=0.0.5
+langchain-anthropic>=0.1.0
 openai>=1.0.0
 
 # Vector store
